[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/gdscript_console/fonts/main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/gdscript_console/console.gd" type="Script" id=2]
[ext_resource path="res://addons/gdscript_console/icons/Play.svg" type="Texture" id=3]
[ext_resource path="res://addons/gdscript_console/icons/Clear.svg" type="Texture" id=4]
[ext_resource path="res://addons/gdscript_console/fonts/code_font.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Message" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.980392, 0.631373, 0.0862745, 1 )
autowrap = true

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 413
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="TextEdit" parent="VBoxContainer/VSplitContainer"]
margin_right = 1024.0
margin_bottom = 413.0
mouse_filter = 1
custom_fonts/font = ExtResource( 5 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer"]
margin_top = 425.0
margin_right = 1024.0
margin_bottom = 582.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VSplitContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 29.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 1004.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 45.0
margin_bottom = 21.0
text = "Output"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 794.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Run" type="Button" parent="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 804.0
margin_right = 889.0
margin_bottom = 29.0
rect_min_size = Vector2( 85, 0 )
text = "Run"
icon = ExtResource( 3 )

[node name="Clear" type="Button" parent="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 899.0
margin_right = 984.0
margin_bottom = 29.0
rect_min_size = Vector2( 85, 29 )
text = "Clear"
icon = ExtResource( 4 )

[node name="Result" type="TextEdit" parent="VBoxContainer/VSplitContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
readonly = true
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="VBoxContainer/VSplitContainer/Editor" to="." method="_on_Editor_gui_input"]
[connection signal="request_completion" from="VBoxContainer/VSplitContainer/Editor" to="." method="_on_Editor_request_completion"]
[connection signal="text_changed" from="VBoxContainer/VSplitContainer/Editor" to="." method="_on_Editor_text_changed"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
